# emx-llm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  USAGE.md  config.toml  test-tool-prompts.md  test_tools_load.rs
.claude/: settings.local.json
docs/: session-mbox-design.md  tool-call-design.md  tool-templates.md  tools-directory.md  tools.md
examples/: test_tools_load.rs
spec/: README.md  api.md  config.md  development-plan.md  load-balancing.md  monitoring.md  mvp.md  rate-limiting.md  routing.md  security.md
src/: client.rs  config.rs  config.rs.bak  fixture_recorder.rs  lib.rs  message.rs  mock_server.rs  provider.rs  session.rs
src/gate/: anthropic_handlers.rs  anthropic_handlers_v2.rs  config.rs  handlers.rs  mod.rs  openai_handlers.rs  openai_handlers_v2.rs  provider_handlers.rs  router.rs  server.rs
src/prompts/: system.md
tests/: e2e.rs  test_raw_stream.rs  tool-call-test.md
tests/e2e/: 001-health-check.txtar  002-openai-chat.txtar  003-anthropic-messages.txtar  004-list-endpoints.txtar  005-error-handling.txtar  EXAMPLES.md  QUICKSTART.md  README.md
tools/: glob.tcl  read.tcl
